Fix up some spacing issues with the character template

--- a/less/evething.less
+++ b/less/evething.less
@@ -28,6 +28,10 @@ img.icon {
   margin-left: -3px;
 }
 
+div.image {
+  margin-bottom: 20px;
+}
+
 /* icon definitions borrowed from Bootstrap */
 [class^="icons-"],
 [class*=" icons-"] {
